--- a/Css/FB.html
+++ b/Css/FB.html
@@ -37,7 +37,16 @@
             </div>
 
         </div>
+        <div class="main-bod">
+            <div class="left-sec">
+          <p class="para">Facebook helps you connect and share with<br> the people in your life</p>
+           <img  class="imge" src="FB.png" alt="">
+            </div>
+            <div class="right-sec">
 
+            </div>
+
+        </div>
     </Div>
 </body>
 </html>
